Auto git push bash script

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "work",
+  "name": "node-mongoose-socketio-jasmine/",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
